<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/margin"
    android:paddingRight="@dimen/margin"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleHeight"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:text="@string/share_to" />
    
    <View
        style="@style/hsplitView"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemHeight"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/itemWidth"
                android:layout_height="@dimen/itemWidth"
                android:background="@drawable/weixin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/weixin" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/itemWidth"
                android:layout_height="@dimen/itemWidth"
                android:background="@drawable/timeline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/timeline" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/copylink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/itemWidth"
                android:layout_height="@dimen/itemWidth"
                android:background="@drawable/link" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/copy_link" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/qrcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/itemWidth"
                android:layout_height="@dimen/itemWidth"
                android:background="@drawable/qrcode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/qrcode" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>